# BajajAssessment

backend/: Cargo.toml  test.sh
backend/logs/: bfhl.log.2026-04-24
backend/src/: graph.rs  handler.rs  main.rs  models.rs  parser.rs
frontend/: .envexample  index.html
frontend/src/: main.js  style.css
